--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -1,5 +1,6 @@
 ﻿		body{
 			/* background-color:rgba(0,0,255,0.3); */
+			font-family: 'Raleway', sans-serif;
 		}
 		
 		.grayedOut {
@@ -680,7 +681,7 @@
 				-webkit-border-radius: 18;
 				-moz-border-radius: 18;
 				border-radius: 18px;
-				font-family: Arial;
+				font-family: 'Raleway', sans-serif;
 				color: #ffffff;
 				font-size: 16px;
 				padding: 10px 20px 10px 20px;
