--- a/AWS_Website/www_static/css/style.css
+++ b/AWS_Website/www_static/css/style.css
@@ -1,6 +1,6 @@
-@import url(font-awesome.min.css);
+/*@import url(font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,300,100italic,300italic");
-
+*/
 /* ============================================================
   DEMO 4 - FULL SCREEN BACKGROUND VIDEO
 ============================================================ */
