--- a/AWS_Website/www_static/css/bootstrap.css
+++ b/AWS_Website/www_static/css/bootstrap.css
@@ -1,7 +1,7 @@
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 /* line 9, ../sass/bootstrap/normalize.scss */
 html {
-  font-family: sans-serif;
+  font-family: 'Raleway', sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -143,7 +143,8 @@ code,
 kbd,
 pre,
 samp {
-  font-family: monospace, monospace;
+  /*font-family: monospace, monospace;*/
+  font-family: 'Raleway', sans-serif;
   font-size: 1em;
 }
 
@@ -365,7 +366,8 @@ th {
   }
 }
 @font-face {
-  font-family: 'Glyphicons Halflings';
+  /*font-family: 'Glyphicons Halflings';*/
+  font-family: 'Raleway', sans-serif;
   src: url("../fonts/glyphicons-halflings-regular.eot");
   src: url("../fonts/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/glyphicons-halflings-regular.woff") format("woff"), url("../fonts/glyphicons-halflings-regular.ttf") format("truetype"), url("../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg");
 }
@@ -375,7 +377,8 @@ th {
   position: relative;
   top: 1px;
   display: inline-block;
-  font-family: 'Glyphicons Halflings';
+  /*font-family: 'Glyphicons Halflings';*/
+  font-family: 'Raleway', sans-serif;
   font-style: normal;
   font-weight: normal;
   line-height: 1;
@@ -1406,7 +1409,8 @@ html {
 
 /* line 27, ../sass/bootstrap/_scaffolding.scss */
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+  font-family: 'Raleway', sans-serif;
   font-size: 14px;
   line-height: 1.42857;
   color: #333333;
@@ -1973,7 +1977,8 @@ code,
 kbd,
 pre,
 samp {
-  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: 'Raleway', sans-serif;
+  /*font-family: Menlo, Monaco, Consolas, "Courier New", monospace;*/
 }
 
 /* line 15, ../sass/bootstrap/_code.scss */
@@ -7587,7 +7592,8 @@ button.close {
   width: 20px;
   height: 20px;
   margin-top: -10px;
-  font-family: serif;
+  /*font-family: serif;*/
+  font-family: 'Raleway', sans-serif;
 }
 /* line 132, ../sass/bootstrap/_carousel.scss */
 .carousel-control .icon-prev:before {
