[refactor] Align title to close icon

--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -310,7 +310,8 @@
 	    	display: none;
 	    }
 		
-		.panelTitle{  
+		.panelTitle{
+			top:2%;
 			position: absolute;
 			left: 10%;
 			font-size:14px;
