[refactor] Adjusted menu style

--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -36,6 +36,12 @@
 			text-decoration:none;
 		}
 
+		#primary_nav_wrap ul a:hover
+		{
+			color:#7badd9;
+			cursor: pointer;
+		}
+
 		#primary_nav_wrap ul li
 		{
 			position:relative;
