[refactor] Added shadow to text (text used to blend with background bad), added styleguide blue as hover blue (previus blue faded with background)

--- a/AWS_Website/www_static/css/style.css
+++ b/AWS_Website/www_static/css/style.css
@@ -173,10 +173,11 @@ a {
     border-bottom: dotted 1px;
     color: #3d21f8;
     text-decoration: none;
+    text-shadow: 1px 1px #000000;
 }
 
     a:hover {
-        color: #3d21f8 !important;
+        color: #7badd9 !important;
         border-bottom-color: transparent;
     }
 
