--- a/AWS_Website/www_static/css/bootstrap/bootstrap.css
+++ b/AWS_Website/www_static/css/bootstrap/bootstrap.css
@@ -1,7 +1,7 @@
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 /* line 9, ../../sass/bootstrap/normalize.scss */
 html {
-  font-family: sans-serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -143,7 +143,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: monospace, monospace;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-size: 1em;
 }
 
@@ -365,7 +365,7 @@ th {
   }
 }
 @font-face {
-  font-family: 'Glyphicons Halflings';
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   src: url("../fonts/glyphicons-halflings-regular.eot");
   src: url("../fonts/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/glyphicons-halflings-regular.woff") format("woff"), url("../fonts/glyphicons-halflings-regular.ttf") format("truetype"), url("../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg");
 }
@@ -375,7 +375,7 @@ th {
   position: relative;
   top: 1px;
   display: inline-block;
-  font-family: 'Glyphicons Halflings';
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-style: normal;
   font-weight: normal;
   line-height: 1;
@@ -1406,7 +1406,7 @@ html {
 
 /* line 27, ../../sass/bootstrap/_scaffolding.scss */
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-size: 14px;
   line-height: 1.42857;
   color: #333333;
@@ -1418,7 +1418,7 @@ input,
 button,
 select,
 textarea {
-  font-family: inherit;
+  font-family: ;font-family: inherit;
   font-size: inherit;
   line-height: inherit;
 }
@@ -1517,7 +1517,7 @@ hr {
 /* line 10, ../../sass/bootstrap/_type.scss */
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: inherit;
+  font-family: ;font-family: inherit;
   font-weight: 500;
   line-height: 1.1;
   color: inherit;
@@ -1973,7 +1973,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 
 /* line 15, ../../sass/bootstrap/_code.scss */
@@ -7586,7 +7586,7 @@ button.close {
   width: 20px;
   height: 20px;
   margin-top: -10px;
-  font-family: serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 /* line 132, ../../sass/bootstrap/_carousel.scss */
 .carousel-control .icon-prev:before {
