--- a/AWS_Website/www_static/css/reset.css
+++ b/AWS_Website/www_static/css/reset.css
@@ -14,9 +14,9 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
+  font-size: 16px;
   vertical-align: baseline;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
 }
   
 article, aside, details, figcaption, figure, 
@@ -311,7 +311,7 @@ FLOATING MENU
 
     body {
   /*font-family: 'Open Sans','Helvetica Neue', Arial, sans-serif;*/
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-size: 14px;
   color: #111;
   line-height: 21px;
@@ -382,7 +382,7 @@ blockquote {
 pre,
 code {
   /*font-family: Consolas,"Liberation Mono",Courier,monospace;*/
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-size: 12px;
   line-height: 1.4;
 }
@@ -682,7 +682,7 @@ padding: 0 20px 20px;
 .new-template {
   text-align: left;
   /*font-family: Arial, sans-serif;*/
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   color: white;
   font-size: 10px;
   padding: 1px 5px 1px;
