--- a/AWS_Website/www_static/css/style.css
+++ b/AWS_Website/www_static/css/style.css
@@ -36,7 +36,7 @@
     }
 
     .cmn-video-demo4__content--header h2 {
-        font-family: 'Raleway', sans-serif;
+        font-family: 'Yanone Kaffeesatz', sans-serif;
         font-size: 30px;
     }
 
@@ -48,7 +48,7 @@
         display: inline-block;
         margin: 0;
         padding: 10px 20px;
-        font-family: 'Raleway', sans-serif;
+        font-family: 'Yanone Kaffeesatz', sans-serif;
         border: solid 1px #fff;
         -webkit-transition: background 0.3s, color 0.3s, text-shadow 0.3s;
         -moz-transition: background 0.3s, color 0.3s, text-shadow 0.3s;
@@ -70,7 +70,7 @@
     .cmn-video-demo4__content--main h2 {
         margin: 0 0 10px 0;
         color: #fff;
-        font-family: 'Raleway', sans-serif;
+        font-family: 'Yanone Kaffeesatz', sans-serif;
         font-size: 24px;
     }
 
@@ -158,7 +158,7 @@ html, body {
 
 body, input, select, textarea {
     color: rgba(255, 255, 255, 0.75);
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
     font-size: 15pt;
     font-weight: 100;
     line-height: 1.75em;
@@ -2341,7 +2341,7 @@ body.is-touch #banner {
     border:1px solid #ffaa22;
     color:#333333;
 
-    font-family: arial;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
     font-size: inherit;
     font-weight: bold;
     text-decoration: none;
