--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -218,12 +218,14 @@
 		}
 
 		#sliteTitle {
+			font-size: 20px;
 			vertical-align:top;
 			color: white;
 			text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 		}
 
 		#sliteMenu {
+			font-size: 20px;
 			vertical-align:top
 			color: #c4c4c4;
 			/*text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;*/
