[refactor] Updated singin page (font)

--- a/AWS_Website/www_static/css/bootstrap.css
+++ b/AWS_Website/www_static/css/bootstrap.css
@@ -1,7 +1,7 @@
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 /* line 9, ../sass/bootstrap/normalize.scss */
 html {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
