--- a/AWS_Website/www_static/css/screen.css
+++ b/AWS_Website/www_static/css/screen.css
@@ -12,8 +12,9 @@ html {
 
 /* line 14, ../sass/screen.scss */
 body {
-  font: 13px Helvetica, arial, freesans, clean, "sans-serif", "Segoe UI Emoji", "Segoe UI Symbol";
+  /*font: 13px Helvetica, arial, freesans, clean, "sans-serif", "Segoe UI Emoji", "Segoe UI Symbol";*/
   /* background-color: #010352; */
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   background-color: black;
   /* background-image: url("../img/Slite_Background.jpg"); */
 }
