--- a/AWS_Website/www_static/css/style.css
+++ b/AWS_Website/www_static/css/style.css
@@ -2059,7 +2059,7 @@ body.landing #header {
 
 #banner {
     background-attachment: fixed;
-    background-image: url("../img/Slite_Background.jpg");
+    background-image: url("../img/Slite_Background.gif");
     background-position: center center;
     background-size: cover;
     box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
