--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -257,18 +257,22 @@
 		#videochat{
 	    	position: absolute;
 	    	left: 0px;
-			top: 0px;
-	    	width: 25%;
+				top: 0px;
+	    	width: 29%;
+	    	height: 40%;
 	    	/* height: 100vh; */
 	    	display: none;
-			margin-left: 10px;
+	    	-webkit-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
+				-moz-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
+				box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
+				/*margin-left: 10px;*/
 	    	/*
 			background-color: #444444;
   			background-image: -webkit-linear-gradient(top, #444444, #999999);
 			background-image: linear-gradient(to bottom, #444444, #999999);
 			*/
-			border-color: lightblue;
-			border-radius: 25px;
+			/*border-color: lightblue;*/
+			/*border-radius: 25px;*/
 			opacity: 0.93;
 			font-size: 40px;
 			font-weight: bold;
@@ -338,13 +342,13 @@
 			/*border-radius: 25px;*/
 			/*border-color: lightblue;*/
 			opacity: 1;
-	    	position: absolute;
-	    	bottom: 0px;
+    	position: absolute;
+    	bottom: 0px;
 			left: 0px;
-	    	width: 45%%;
-	    	height: 60%;
-	    	display: none;
-				z-index: 2;
+    	width: 29% !important;
+    	height: 60%;
+    	display: none;
+			z-index: 2;
 	    }
 
 		.panelTitle{
@@ -653,6 +657,7 @@
 			  background: url(../img/close.svg);
 			  background-size: 30px 30px;
 			  opacity: 0.7;
+			  z-index: 6;
 			}
 
 			.closevideo:hover {
