--- a/AWS_Website/www_static/css/bootstrap.css
+++ b/AWS_Website/www_static/css/bootstrap.css
@@ -4106,13 +4106,34 @@ select[multiple].input-lg,
 /* line 60, ../sass/bootstrap/_buttons.scss */
 .btn-primary {
   color: white;
-  background-color: #428bca;
-  border-color: #357ebd;
+  /*background-color: #428bca;*/
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#428bca+1,7db9e8+100 */
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#428bca+0,a9d2f3+14,90bae4+25,90bcea+37,90bff0+50,a2daf5+87,428bca+100 */
+  background: rgb(66,139,202); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(66,139,202,1) 0%, rgba(169,210,243,1) 14%, rgba(144,186,228,1) 25%, rgba(144,188,234,1) 37%, rgba(144,191,240,1) 50%, rgba(162,218,245,1) 87%, rgba(66,139,202,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(66,139,202,1)), color-stop(14%,rgba(169,210,243,1)), color-stop(25%,rgba(144,186,228,1)), color-stop(37%,rgba(144,188,234,1)), color-stop(50%,rgba(144,191,240,1)), color-stop(87%,rgba(162,218,245,1)), color-stop(100%,rgba(66,139,202,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(66,139,202,1) 0%,rgba(169,210,243,1) 14%,rgba(144,186,228,1) 25%,rgba(144,188,234,1) 37%,rgba(144,191,240,1) 50%,rgba(162,218,245,1) 87%,rgba(66,139,202,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(66,139,202,1) 0%,rgba(169,210,243,1) 14%,rgba(144,186,228,1) 25%,rgba(144,188,234,1) 37%,rgba(144,191,240,1) 50%,rgba(162,218,245,1) 87%,rgba(66,139,202,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(66,139,202,1) 0%,rgba(169,210,243,1) 14%,rgba(144,186,228,1) 25%,rgba(144,188,234,1) 37%,rgba(144,191,240,1) 50%,rgba(162,218,245,1) 87%,rgba(66,139,202,1) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(66,139,202,1) 0%,rgba(169,210,243,1) 14%,rgba(144,186,228,1) 25%,rgba(144,188,234,1) 37%,rgba(144,191,240,1) 50%,rgba(162,218,245,1) 87%,rgba(66,139,202,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#428bca', endColorstr='#428bca',GradientType=0 ); /* IE6-9 */
+
+  /*border-color: #357ebd;*/
 }
 /* line 15, ../sass/bootstrap/mixins/_buttons.scss */
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle {
   color: white;
-  background-color: #3071a9;
+  /*background-color: #3071a9;*/
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#428bca+0,a2daf5+13,90bff0+50,90bcea+63,90bae4+75,a9d2f3+86,428bca+100 */
+  background: rgb(66,139,202); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(66,139,202,1) 0%, rgba(162,218,245,1) 13%, rgba(144,191,240,1) 50%, rgba(144,188,234,1) 63%, rgba(144,186,228,1) 75%, rgba(169,210,243,1) 86%, rgba(66,139,202,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(66,139,202,1)), color-stop(13%,rgba(162,218,245,1)), color-stop(50%,rgba(144,191,240,1)), color-stop(63%,rgba(144,188,234,1)), color-stop(75%,rgba(144,186,228,1)), color-stop(86%,rgba(169,210,243,1)), color-stop(100%,rgba(66,139,202,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(66,139,202,1) 0%,rgba(162,218,245,1) 13%,rgba(144,191,240,1) 50%,rgba(144,188,234,1) 63%,rgba(144,186,228,1) 75%,rgba(169,210,243,1) 86%,rgba(66,139,202,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(66,139,202,1) 0%,rgba(162,218,245,1) 13%,rgba(144,191,240,1) 50%,rgba(144,188,234,1) 63%,rgba(144,186,228,1) 75%,rgba(169,210,243,1) 86%,rgba(66,139,202,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(66,139,202,1) 0%,rgba(162,218,245,1) 13%,rgba(144,191,240,1) 50%,rgba(144,188,234,1) 63%,rgba(144,186,228,1) 75%,rgba(169,210,243,1) 86%,rgba(66,139,202,1) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(66,139,202,1) 0%,rgba(162,218,245,1) 13%,rgba(144,191,240,1) 50%,rgba(144,188,234,1) 63%,rgba(144,186,228,1) 75%,rgba(169,210,243,1) 86%,rgba(66,139,202,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#428bca', endColorstr='#428bca',GradientType=0 ); /* IE6-9 */
+
   border-color: #285e8e;
 }
 /* line 22, ../sass/bootstrap/mixins/_buttons.scss */
@@ -4121,7 +4142,16 @@ select[multiple].input-lg,
 }
 /* line 32, ../sass/bootstrap/mixins/_buttons.scss */
 .btn-primary.disabled, .btn-primary.disabled:hover, .btn-primary.disabled:focus, .btn-primary.disabled:active, .btn-primary.disabled.active, .btn-primary[disabled], .btn-primary[disabled]:hover, .btn-primary[disabled]:focus, .btn-primary[disabled]:active, .btn-primary[disabled].active, fieldset[disabled] .btn-primary, fieldset[disabled] .btn-primary:hover, fieldset[disabled] .btn-primary:focus, fieldset[disabled] .btn-primary:active, fieldset[disabled] .btn-primary.active {
-  background-color: #428bca;
+  /*background-color: #428bca;*/
+  background: rgb(66,139,202); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(66,139,202,1) 0%, rgba(169,210,243,1) 14%, rgba(144,186,228,1) 25%, rgba(144,188,234,1) 37%, rgba(144,191,240,1) 50%, rgba(162,218,245,1) 87%, rgba(66,139,202,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(66,139,202,1)), color-stop(14%,rgba(169,210,243,1)), color-stop(25%,rgba(144,186,228,1)), color-stop(37%,rgba(144,188,234,1)), color-stop(50%,rgba(144,191,240,1)), color-stop(87%,rgba(162,218,245,1)), color-stop(100%,rgba(66,139,202,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(66,139,202,1) 0%,rgba(169,210,243,1) 14%,rgba(144,186,228,1) 25%,rgba(144,188,234,1) 37%,rgba(144,191,240,1) 50%,rgba(162,218,245,1) 87%,rgba(66,139,202,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(66,139,202,1) 0%,rgba(169,210,243,1) 14%,rgba(144,186,228,1) 25%,rgba(144,188,234,1) 37%,rgba(144,191,240,1) 50%,rgba(162,218,245,1) 87%,rgba(66,139,202,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(66,139,202,1) 0%,rgba(169,210,243,1) 14%,rgba(144,186,228,1) 25%,rgba(144,188,234,1) 37%,rgba(144,191,240,1) 50%,rgba(162,218,245,1) 87%,rgba(66,139,202,1) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(66,139,202,1) 0%,rgba(169,210,243,1) 14%,rgba(144,186,228,1) 25%,rgba(144,188,234,1) 37%,rgba(144,191,240,1) 50%,rgba(162,218,245,1) 87%,rgba(66,139,202,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#428bca', endColorstr='#428bca',GradientType=0 ); /* IE6-9 */
+
   border-color: #357ebd;
 }
 /* line 38, ../sass/bootstrap/mixins/_buttons.scss */
