--- a/AWS_Website/www_static/css/bootstrap.css
+++ b/AWS_Website/www_static/css/bootstrap.css
@@ -1,7 +1,7 @@
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 /* line 9, ../sass/bootstrap/normalize.scss */
 html {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'Lato', sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -1410,7 +1410,7 @@ html {
 /* line 27, ../sass/bootstrap/_scaffolding.scss */
 body {
   /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 14px;
   line-height: 1.42857;
   color: #333333;
