--- a/AWS_Website/www_static/css/reset.css
+++ b/AWS_Website/www_static/css/reset.css
@@ -1,3 +1,4 @@
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -14,9 +15,9 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 16px;
+  font-size: 14px;
   vertical-align: baseline;
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
   
 article, aside, details, figcaption, figure, 
@@ -311,7 +312,7 @@ FLOATING MENU
 
     body {
   /*font-family: 'Open Sans','Helvetica Neue', Arial, sans-serif;*/
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 14px;
   color: #111;
   line-height: 21px;
@@ -382,7 +383,7 @@ blockquote {
 pre,
 code {
   /*font-family: Consolas,"Liberation Mono",Courier,monospace;*/
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 12px;
   line-height: 1.4;
 }
@@ -682,7 +683,7 @@ padding: 0 20px 20px;
 .new-template {
   text-align: left;
   /*font-family: Arial, sans-serif;*/
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: white;
   font-size: 10px;
   padding: 1px 5px 1px;
