--- a/AWS_Website/www_static/css/screen.css
+++ b/AWS_Website/www_static/css/screen.css
@@ -14,7 +14,7 @@ html {
 body {
   /*font: 13px Helvetica, arial, freesans, clean, "sans-serif", "Segoe UI Emoji", "Segoe UI Symbol";*/
   /* background-color: #010352; */
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'Lato', sans-serif;
   background-color: black;
   background-image: url("../img/Slite_Background.jpg");
 
