--- a/AWS_Website/www_static/css/style.css
+++ b/AWS_Website/www_static/css/style.css
@@ -36,7 +36,7 @@
     }
 
     .cmn-video-demo4__content--header h2 {
-        font-family: 'Yanone Kaffeesatz', sans-serif;
+        font-family: 'Lato', sans-serif;
         font-size: 30px;
     }
 
@@ -48,7 +48,7 @@
         display: inline-block;
         margin: 0;
         padding: 10px 20px;
-        font-family: 'Yanone Kaffeesatz', sans-serif;
+        font-family: 'Lato', sans-serif;
         border: solid 1px #fff;
         -webkit-transition: background 0.3s, color 0.3s, text-shadow 0.3s;
         -moz-transition: background 0.3s, color 0.3s, text-shadow 0.3s;
@@ -70,7 +70,7 @@
     .cmn-video-demo4__content--main h2 {
         margin: 0 0 10px 0;
         color: #fff;
-        font-family: 'Yanone Kaffeesatz', sans-serif;
+        font-family: 'Lato', sans-serif;
         font-size: 24px;
     }
 
@@ -158,7 +158,7 @@ html, body {
 
 body, input, select, textarea {
     color: rgba(255, 255, 255, 0.75);
-    font-family: 'Yanone Kaffeesatz', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 15px;
     font-weight: 100;
     line-height: 1.75em;
@@ -264,7 +264,7 @@ blockquote {
 code {
     background: rgba(255, 255, 255, 0.075);
     border-radius: 4px;
-    font-family: 'Yanone Kaffeesatz', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 0.9em;
     margin: 0 0.25em;
     padding: 0.25em 0.65em;
@@ -272,7 +272,7 @@ code {
 
 pre {
     -webkit-overflow-scrolling: touch;
-    font-family: 'Yanone Kaffeesatz', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 0.9em;
     margin: 0 0 2em 0;
 }
@@ -714,7 +714,7 @@ body.landing {
     body.landing:before {
         -moz-osx-font-smoothing: grayscale;
         -webkit-font-smoothing: antialiased;
-        font-family: 'Yanone Kaffeesatz', sans-serif;
+        font-family: 'Lato', sans-serif;
         font-style: normal;
         font-weight: normal;
         text-transform: none !important;
@@ -907,7 +907,7 @@ textarea {
     .select-wrapper:before {
         -moz-osx-font-smoothing: grayscale;
         -webkit-font-smoothing: antialiased;
-        font-family: 'Yanone Kaffeesatz', sans-serif;
+        font-family: 'Lato', sans-serif;
         font-style: normal;
         font-weight: normal;
         text-transform: none !important;
@@ -1081,7 +1081,7 @@ input[type="radio"] {
     .icon:before {
         -moz-osx-font-smoothing: grayscale;
         -webkit-font-smoothing: antialiased;
-        font-family: 'Yanone Kaffeesatz', sans-serif;
+        font-family: 'Lato', sans-serif;
         font-style: normal;
         font-weight: normal;
         text-transform: none !important;
@@ -1098,7 +1098,7 @@ input[type="radio"] {
         .icon.alt:before {
             -moz-osx-font-smoothing: grayscale;
             -webkit-font-smoothing: antialiased;
-            font-family: 'Yanone Kaffeesatz', sans-serif;
+            font-family: 'Lato', sans-serif;
             font-style: normal;
             font-weight: normal;
             text-transform: none !important;
@@ -1132,7 +1132,7 @@ input[type="radio"] {
             .icon.major.alt:before {
                 -moz-osx-font-smoothing: grayscale;
                 -webkit-font-smoothing: antialiased;
-                font-family: 'Yanone Kaffeesatz', sans-serif;
+                font-family: 'Lato', sans-serif;
                 font-style: normal;
                 font-weight: normal;
                 text-transform: none !important;
@@ -2341,7 +2341,7 @@ body.is-touch #banner {
     border:1px solid #ffaa22;
     color:#333333;
 
-    font-family: 'Yanone Kaffeesatz', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: inherit;
     font-weight: bold;
     text-decoration: none;
