--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -657,6 +657,13 @@
 			  height: 20px;
 				background-size: 20px 20px;
 			  background-repeat: no-repeat;
+			  z-index: 999;
+			}
+
+			.closeLiveVideo {
+				position: absolute;
+				right: 1%;
+				z-index: 999999 !important;
 			}
 
 			.startTemporaryPopup{
@@ -756,8 +763,8 @@
 	display: none;
 	color: black;
 	position: absolute;
-	top: 0px;
-	padding-top: 30%;
+	top: 5%;
+	padding-top: 25%;
 	font-size: 150px;
 	opacity: 0.1;
 	cursor: pointer;
