--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -303,7 +303,7 @@
 			top: 0px;
 			width: 55%;
 			height: 98%;
-			background-color: rgb(231, 228, 228);
+			background-color: white;
 			display: none;
 			z-index: 1;
 		}
