[bugs] Font size/color for menu

--- a/AWS_Website/www_static/css/reset.css
+++ b/AWS_Website/www_static/css/reset.css
@@ -15,7 +15,7 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 14px !important;
+  /*font-size: 14px !important;*/
   vertical-align: baseline;
   font-family: 'Lato', sans-serif;
 }
