--- a/AWS_Website/www_static/css/bootstrap/bootstrap.css
+++ b/AWS_Website/www_static/css/bootstrap/bootstrap.css
@@ -1,7 +1,7 @@
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 /* line 9, ../../sass/bootstrap/normalize.scss */
 html {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'Lato', sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -143,7 +143,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 1em;
 }
 
@@ -365,7 +365,7 @@ th {
   }
 }
 @font-face {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'Lato', sans-serif;
   src: url("../fonts/glyphicons-halflings-regular.eot");
   src: url("../fonts/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/glyphicons-halflings-regular.woff") format("woff"), url("../fonts/glyphicons-halflings-regular.ttf") format("truetype"), url("../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg");
 }
@@ -375,7 +375,7 @@ th {
   position: relative;
   top: 1px;
   display: inline-block;
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: normal;
   line-height: 1;
@@ -1406,7 +1406,7 @@ html {
 
 /* line 27, ../../sass/bootstrap/_scaffolding.scss */
 body {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 14px;
   line-height: 1.42857;
   color: #333333;
@@ -1973,7 +1973,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 /* line 15, ../../sass/bootstrap/_code.scss */
@@ -3729,9 +3729,12 @@ select[multiple].input-sm,
 .input-group-lg > .input-group-btn > .btn {
   height: 46px;
   padding: 10px 16px;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 1.33;
   border-radius: 6px;
+  width: 90%;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 /* line 75, ../../sass/bootstrap/mixins/_forms.scss */
@@ -7586,7 +7589,7 @@ button.close {
   width: 20px;
   height: 20px;
   margin-top: -10px;
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 /* line 132, ../../sass/bootstrap/_carousel.scss */
 .carousel-control .icon-prev:before {
