--- a/AWS_Website/www_static/css/bootstrap/bootstrap.css
+++ b/AWS_Website/www_static/css/bootstrap/bootstrap.css
@@ -4101,13 +4101,33 @@ select[multiple].input-lg,
 /* line 60, ../../sass/bootstrap/_buttons.scss */
 .btn-primary {
   color: white;
-  background-color: #428bca;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#428bca+1,7db9e8+100 */
+  /*background-color: #428bca;*/
+
+  background: rgb(125,185,232); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(125,185,232,1) 0%, rgba(66,139,202,1) 99%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(125,185,232,1)), color-stop(99%,rgba(66,139,202,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(125,185,232,1) 0%,rgba(66,139,202,1) 99%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(125,185,232,1) 0%,rgba(66,139,202,1) 99%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(125,185,232,1) 0%,rgba(66,139,202,1) 99%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(125,185,232,1) 0%,rgba(66,139,202,1) 99%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', endColorstr='#428bca',GradientType=0 ); /* IE6-9 */
   border-color: #357ebd;
 }
 /* line 15, ../../sass/bootstrap/mixins/_buttons.scss */
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle {
   color: white;
-  background-color: #3071a9;
+  /*background-color: #3071a9;*/
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7db9e8+0,428bca+99 */
+  background: rgb(66,139,202); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(66,139,202,1) 1%, rgba(125,185,232,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(66,139,202,1)), color-stop(100%,rgba(125,185,232,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(66,139,202,1) 1%,rgba(125,185,232,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(66,139,202,1) 1%,rgba(125,185,232,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(66,139,202,1) 1%,rgba(125,185,232,1) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(66,139,202,1) 1%,rgba(125,185,232,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#428bca', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
+  
   border-color: #285e8e;
 }
 /* line 22, ../../sass/bootstrap/mixins/_buttons.scss */
@@ -4116,7 +4136,14 @@ select[multiple].input-lg,
 }
 /* line 32, ../../sass/bootstrap/mixins/_buttons.scss */
 .btn-primary.disabled, .btn-primary.disabled:hover, .btn-primary.disabled:focus, .btn-primary.disabled:active, .btn-primary.disabled.active, .btn-primary[disabled], .btn-primary[disabled]:hover, .btn-primary[disabled]:focus, .btn-primary[disabled]:active, .btn-primary[disabled].active, fieldset[disabled] .btn-primary, fieldset[disabled] .btn-primary:hover, fieldset[disabled] .btn-primary:focus, fieldset[disabled] .btn-primary:active, fieldset[disabled] .btn-primary.active {
-  background-color: #428bca;
+   background: rgb(125,185,232); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(125,185,232,1) 0%, rgba(66,139,202,1) 99%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(125,185,232,1)), color-stop(99%,rgba(66,139,202,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(125,185,232,1) 0%,rgba(66,139,202,1) 99%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(125,185,232,1) 0%,rgba(66,139,202,1) 99%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(125,185,232,1) 0%,rgba(66,139,202,1) 99%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(125,185,232,1) 0%,rgba(66,139,202,1) 99%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', endColorstr='#428bca',GradientType=0 ); /* IE6-9 */
   border-color: #357ebd;
 }
 /* line 38, ../../sass/bootstrap/mixins/_buttons.scss */
