--- a/AWS_Website/www_static/css/bootstrap/bootstrap.css
+++ b/AWS_Website/www_static/css/bootstrap/bootstrap.css
@@ -3731,8 +3731,8 @@ select[multiple].input-sm,
   padding: 10px 16px;
   font-size: 14px;
   line-height: 1.33;
-  border-radius: 6px;
-  width: 90%;
+/*  border-radius: 6px;
+  width: 90%;*/
   margin-right: auto;
   margin-left: auto;
 }
