--- a/AWS_Website/www_static/css/screen.css
+++ b/AWS_Website/www_static/css/screen.css
@@ -12,11 +12,18 @@ html {
 
 /* line 14, ../sass/screen.scss */
 body {
-  /*font: 13px Helvetica, arial, freesans, clean, "sans-serif", "Segoe UI Emoji", "Segoe UI Symbol";*/
-  /* background-color: #010352; */
   font-family: 'Lato', sans-serif;
   background-color: black;
-  background-image: url("../img/Slite_Background.jpg");
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000053+0,0384ec+100 */
+  background: rgb(0,0,83); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(0,0,83,1) 0%, rgba(3,132,236,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,83,1)), color-stop(100%,rgba(3,132,236,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(0,0,83,1) 0%,rgba(3,132,236,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(0,0,83,1) 0%,rgba(3,132,236,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(0,0,83,1) 0%,rgba(3,132,236,1) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(0,0,83,1) 0%,rgba(3,132,236,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000053', endColorstr='#0384ec',GradientType=0 ); /* IE6-9 */
+  /*background-image: url("../img/Slite_Background.jpg");*/
 
 }
 
@@ -195,7 +202,7 @@ p {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     background: rgba(255, 255, 255, 0.1);
-    font-weight: bold;
+    /*font-weight: bold;*/
     font-size: 15px;
     color: #000;
     -webkit-transition: all 500ms ease-in-out;
